--- a/app.json
+++ b/app.json
@@ -3,8 +3,8 @@
   "description": "Telegram's best Open Source ALL-In-One Multi Purpose RoBot. Create your Fork now.",
   "logo": "https://static10.tgstat.ru/channels/_0/96/96faf804011bb615badb93e6921c65e0.jpg",
   "keywords": ["telegram", "best", "open", "source", "file", "formatter", "chat", "uploader"],
-  "website": "https://github.com/m4mallu/renameprobot",
-  "repository": "https://github.com/m4mallu/renameprobot",
+  "website": "https://github.com/Shubhamdev89/renameprobot",
+  "repository": "https://github.com/Shubhamdev89/renameprobot",
   "env": {
         "APP_ID": {"description": "Get this value from https://my.telegram.org", "required": true},
         "API_HASH": {"description": "Get this value from https://my.telegram.org" , "required": true},
@@ -30,7 +30,7 @@
   "formation": {
     "worker": {
       "quantity": 1,
-      "size": "free"
+      "size": "eco"
     }
   }
 }
